committed in master

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,6 @@
     <string name="label_company_name">[V2.0] Developed by Blue Ocean Strategy Co.Ltd</string>
 
     <string name="place_continue">Place &amp; Continue</string>
+
+    <string name="test">test</string>
 </resources>
